adição de quaresma liturgica

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -84,6 +84,7 @@
                     <p:menuitem value="📖 Liturgia" action="#{beanUtil.resetLiturgia()}" />
 
                     <p:submenu label="✝️ Quaresmas">
+                        <p:menuitem value="Quaresma Litúrgica" action="#{beanUtil.resetQuaresma('liturgica')}" />
                         <p:menuitem value="Quaresma de São Miguel" action="#{beanUtil.resetQuaresma('miguel')}" />
                         <p:menuitem value="Quaresma de São José" action="#{beanUtil.resetQuaresma('jose')}" />
                     </p:submenu>
